2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Tail call optimization for functions with no stack parameters.

2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/pdk/peep.c,
	  src/stm8/peep.c,
	  src/z80/gen.c,
	  src/z80/peep.c,
	  support/regression/tests/bug-3239.c:
	  Fix bugs #3235, 3239.

2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a code generation bug in hl handling.

2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/z80/gen.c:
	  Refactor __z88dk_callee support to allow other calling conventions to use callee stack cleanup.

2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c,
	  src/SDCCsalloc.hpp,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/bug-3240.c:
	  Tail call optimization fixes for register parameters.

2021-05-17 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/stm8/gen.c,
	  src/stm8/main.c,
	  src/stm8/peep.c,
	  support/regression/tests/stm8-conventions.c:
	  Support calling conventions of Raisonance, IAR and Cosmic compilers for STM8.
	* support/regression/tests/bug2084206.c:
	  Disable test that relies on size of void * being the same as function pointer for ds390.

2021-05-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsalloc.hpp,
	  support/regression/tests/bug-3238.c:
	  Fix bug #3238.
	* src/stm8/gen.c:
	  Fix a register parameter issue in code generation for function pointers in large model.

2021-05-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug2084206.c:
	  Function pointer size fix.
	* src/stm8/gen.c:
	  Tail-call optimization fix.
	* src/stm8/peep.c:
	  Peephole optimizer fix for register arguments.
	* src/SDCCast.c:
	  Fixes for strcpy->memcpy optimization.
