@@ -1,3 +1,9 @@
+2021-05-18 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3242.c:
+	  Fix bug #3242.
+
 2021-05-17 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c,
